# enrich_me

./: .gitignore  README.md  cluster1000_.csv  generate_class_docs.py  hello.py  mock.csv  pyproject.toml  requirements.txt  settlement_errors_20250515.json  ストラテジー仕様書.md  環境構築マニュアル.md
TOPIX_prediction/: TOPIX_alltime.csv
class_specs/calculation/: README.md
class_specs/clustering/: README.md
class_specs/evaluation/: README.md
class_specs/facades/: README.md
class_specs/trading/: README.md
ml_core/: base_mlobject.py  data_bundle.py  ml_package.py  multi_mlobject.py
project/: modules.7z
project/config_and_settings/: codes_to_replace.csv  dtypes_stock_fin.csv  factor_neutralization_settings.csv  features_config.yaml  features_to_scrape.csv  raw_stock_fin_cols.yaml  raw_stock_price_cols.yaml  sector_fin_cols.yaml  sector_fin_columns.yaml  sector_index_cols.yaml  sector_index_columns.yaml  stock_fin_cols.yaml  stock_fin_columns.yaml  stock_price_cols copy.yaml  stock_price_columns.yaml  target_neutralization_settings.csv
project/execution_scripts/: experimentalfinal_cumprod.csv  experimentalperformance_metrics.csv  interactive_return_metrics.ipynb  new_sector_list.csv  run_prediction_analysis.py
project/modules/: .env  FlagManager.py  FlagManager2.py  LineNortifier.py  MLDataset.py  SBI.py  SBIOperations.py  SlackNotifier.py  TradeHistoryAnalyzer.py  calculate_stats.py  data_pickler.py  error_handler.py  evaluate_model.py  features_calculator.py  features_scraper.py  file_utilities.py  jquants_api_fetcher.py  machine_learning.py  order_to_SBI.py  paths.py  sbi_operations.py  sbi_trading_logic copy.py  sbi_trading_logic.py  sbi_trading_logic2.py  sector_index_calculator.py  selenium_suite_installer.py  set_time_flags.py  stock_dfs_processor.py  stock_dfs_reader.py  target_calculator.py  virtual_display_installer.py
project/orders/: orders_20241218.json  orders_20241219.json  orders_20241220.json  (+2 more)
sector_pairs/: result_ITインフラ.csv  result_OA機器.csv  result_インフラ.csv  result_スーパー・コンビニ.csv  result_メディア.csv  result_住宅.csv  result_光学.csv  result_化粧・衛生.csv  result_医療機器等.csv  result_商社.csv  result_海運.csv  result_私鉄.csv  result_自動車.csv  result_証券・金融.csv  result_鉄鋼.csv  result_電力.csv  test_OA機器.csv  test_スーパー・コンビニ.csv  test_住宅.csv  test_光学.csv  test_商社.csv  test_海運.csv  test_証券・金融.csv  test_鉄鋼.csv  test_電力.csv
tests/: test_sector_index.py  test_train_predict.py
(+735 files in other folders)
